# vicius

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Directory.Build.targets  LICENSE  README.md  appveyor.yml  examples.sln  examples.sln.DotSettings  stage0.ps1  vcpkg-configuration.json  vcpkg.json  vīcĭus.sln  vīcĭus.sln.DotSettings
.cursor/rules/: cpp-error-handling.mdc  model-parity.mdc
.github/workflows/: build.yml  generate-abstractions-docs.yml  msbuild.yml  publish-abstractions.yml
abstractions/: Directory.Build.props  Directory.Build.targets  Nefarius.Vicius.Abstractions.sln  README.md  nuget.config
abstractions/docs/: index.md  nefarius.vicius.abstractions.converters.datetimeoffsetconverter.md  nefarius.vicius.abstractions.models.authority.md  nefarius.vicius.abstractions.models.checksumalgorithm.md  nefarius.vicius.abstractions.models.checksumparameters.md  nefarius.vicius.abstractions.models.customexpressionconfig.md  nefarius.vicius.abstractions.models.downloadlocationconfig.md  nefarius.vicius.abstractions.models.exitcodecheck.md  nefarius.vicius.abstractions.models.filechecksumconfig.md  nefarius.vicius.abstractions.models.filesizeconfig.md  nefarius.vicius.abstractions.models.fileversionconfig.md  nefarius.vicius.abstractions.models.fixedversionconfig.md  nefarius.vicius.abstractions.models.instanceconfig.md  nefarius.vicius.abstractions.models.mergedconfig.md  nefarius.vicius.abstractions.models.productversiondetectionimplementation.md  nefarius.vicius.abstractions.models.productversiondetectionmethod.md  nefarius.vicius.abstractions.models.registryhive.md  nefarius.vicius.abstractions.models.registryvalueconfig.md  nefarius.vicius.abstractions.models.registryview.md  nefarius.vicius.abstractions.models.sharedconfig.md  nefarius.vicius.abstractions.models.signaturecomparisonpolicy.md  nefarius.vicius.abstractions.models.signatureverificationmode.md  nefarius.vicius.abstractions.models.signatureverificationstrategy.md  nefarius.vicius.abstractions.models.updateconfig.md  nefarius.vicius.abstractions.models.updaterelease.md  nefarius.vicius.abstractions.models.updateresponse.md  nefarius.vicius.abstractions.models.versionresource.md  nefarius.vicius.abstractions.models.zipextractfiledisposition.md
abstractions/src/: Nefarius.Vicius.Abstractions.csproj
abstractions/src/Converters/: DateTimeOffsetConverter.cs
abstractions/src/Models/: CommonTypes.cs  DownloadLocationConfig.cs  InstanceConfig.cs  MergedConfig.cs  ProductDetection.cs  SharedConfig.cs  SignatureValidation.cs  UpdateConfig.cs  UpdateRelease.cs  UpdateResponse.cs
dll/: CMakeLists.txt  README.md  cpp.hint  dll.cpp  dll.h  dll.vcxproj  dll.vcxproj.filters  framework.h  vcpkg.json
docs/: SECURE_UPDATE_PIPELINE.md
examples/configs/: Valkirie_HandheldCompanion_Updates.json  example_secure_updates.json
examples/e2e-setup-stub/: Program.cs  e2e-setup-stub.csproj
examples/server/: .editorconfig  00_publish_server.cmd  Dockerfile  Program.cs  README.md  server.csproj
examples/server/Converters/: CustomDateTimeOffsetConverter.cs
examples/server/Endpoints/: AdvancedExample.cs  DefaultDemoEndpoint.cs  DownloadLocationExample.cs  EmergencyUrlExample.cs  Example00.cs  Example01.cs  Example02.cs  FixedVersionExample.cs  HelpUrlExample.cs  MinimalExample.cs  MultipleReleasesExample.cs  RootEndpoint.cs  Schema.cs  SelfUpdaterExample.cs  TempCopyExample.cs  Updates.cs
examples/server/Endpoints/Detection/: CustomExpression.cs  FileChecksum.cs  FileSize.cs  FileVersion.cs  RegistryValue.cs
examples/server/Endpoints/Detection/Templates/: HandheldCompanion.cs  IniTemplate.cs  ProductByDisplayName.cs
examples/server/Endpoints/E2E/: E2EArtifactEndpoint.cs  E2EChecksumMismatchEndpoint.cs  E2ECorruptFileVersionEndpoint.cs  E2ECorruptRegistryEndpoint.cs  E2EFourSegmentEndpoint.cs  E2EGuard.cs  E2EHappyExeEndpoint.cs  E2EHappyZipEndpoint.cs  E2EMissingRegistryEndpoint.cs  E2ESelfUpdateEndpoint.cs  E2ESignedManifestEndpoint.cs  E2EUpToDateEndpoint.cs
examples/server/Endpoints/Products/: BthPS3UpdatesEndpoint.cs  HidHideUpdatesEndpoint.cs  OpenXRUpdatesEndpoint.cs  README.md
examples/server/Endpoints/Schema/: Schema.cs
examples/server/Models/: CommonTypes.cs  DownloadLocationConfig.cs  MergedConfig.cs  ProductDetection.cs  SharedConfig.cs  SignatureValidation.cs  UpdateConfig.cs  UpdateRelease.cs  UpdateResponse.cs
examples/server/Properties/: launchSettings.json
examples/server/Services/: GitHubApiService.cs
examples/server/Shared/: CommonExamples.cs  IconConverter.cs
include/: README.md
src/: .clang-format  ADL.hpp  CMakeLists.txt  Common.h  Crypto.cpp  Crypto.h  CustomizeMe.h  DownloadAndInstall.hpp  Formatters.h  Http.cpp  Http.h  ImGuiConfig.h  ImGuiConfiguration.h  InstanceConfig.Dialogs.cpp  InstanceConfig.Download.cpp  InstanceConfig.Postpone.cpp  InstanceConfig.Security.cpp  InstanceConfig.Setup.cpp  InstanceConfig.TaskScheduler.cpp  InstanceConfig.Template.cpp  InstanceConfig.Updater.cpp  InstanceConfig.Web.cpp  InstanceConfig.cpp  InstanceConfig.hpp  JSONify.hpp  MimeTypes.cpp  Misc.h  NAuthenticode.cpp  NAuthenticode.h  RunPE.cpp  UI.h  UniUtil.h  UpdateRelease.cpp  UpdateResponse.hpp  Updater.h  Util.h  WizardPage.h  argh.h  cpp.hint  imgui_freetype.cpp  (+17 more)
src/models/: CommonTypes.hpp  DownloadLocationConfig.h  InstanceConfig.hpp  MergedConfig.hpp  ProductDetection.hpp  SharedConfig.hpp  SignatureValidation.hpp  UpdateConfig.hpp  UpdateRelease.hpp  UpdateResponse.hpp
tests/e2e/: conftest.py  fake_setup.c  helpers.py  mock_server.py  requirements.txt  run-e2e.ps1  test_update_scenarios.py
tests/e2e/include/main/: ViciusPostCustomizeMe.h
tests/e2e/include/sig/: ViciusPostCustomizeMe.h.tpl
tools/: ensure-upx.ps1
vcpkg/scripts/buildsystems/msbuild/: vcpkg.targets
wwwroot/: README.md
wwwroot/api/nefarius/HidHide/: updates.json
